# rifs

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt  setup.cfg
docs/: click.rst  conf.py  index.rst  rifs.rst
src/rifs/: __init__.py  cli.py  fairseq.py  hubert.py  hubert_preprocess.py  utils.py
src/rifs/hubert_utils/: common_utils.py  feature_utils.py  kmeans.py
tests/: test_cli.py
