[metadata]
name = rifs
version = attr: rifs.__version__
description = The main entrypoint for interacting with the rifs project
long_description = file: README.md
long_description_content_type = text/markdown
author = Anders Stendevad
author_email = andst@itu.dk
license = MIT
license_file = LICENCE.txt
license_files =
    LICENSE.txt
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: MIT LICENSE
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    click
    art
    rifsdatasets @ git+ssh://git@github.com/rifs-is-free-speech/rifsdatasets#egg=rifsdatasets
    rifsalignment @ git+ssh://git@github.com/rifs-is-free-speech/rifsalignment#egg=rifsalignment
    rifsaugmentation @ git+ssh://git@github.com/rifs-is-free-speech/rifsaugmentation#egg=rifsaugmentation

python_requires = >=3.9
package_dir =
    = src
setup_requires =
    setuptools

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rifs = rifs.cli:cli

[tox:tox]
envlist = py39
minversion = 3.24.5
isolated_build = True

[testenv]
deps =
    pytest
    pre-commit
commands =
    - pre-commit run --all-files
    pytest {posargs}

[testenv:docs]
deps =
    sphinx
    sphinx_rtd_theme
    sphinx-click
    myst-parser
commands =
    sphinx-build -n -T -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
    sphinx-build -n -T -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html

[testenv:lint]
commands =
    pre-commit run --all-files

[testenv:pytest]
commands =
    pytest {posargs}

[testenv:publish]
allowlist_externals =
    git
    bin/touch
    bin/mv
    bin/rm
    bin/cp
    bin/mkdir
deps =
    sphinx
    sphinx_rtd_theme
    sphinx-click
    myst-parser
commands =
    git switch main
    sphinx-build -n -T -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
    mkdir publish_docs
    cp -r docs/_build/html/. publish_docs/
    git switch gh-pages
    git pull
    rm -r src docs
    mv publish_docs/ docs/
    touch docs/.nojekyll
    git add .
    git commit -m "updated docs"
    git push
    git switch main

[flake8]
max-line-length = 120
per-file-ignores =
    docs/conf.py: F401
